--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "astro": "^0.23.7",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
