--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "astro": "^0.23.7",
     "autoprefixer": "^10.4.2",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
   }
