--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
-    "astro": "^0.26.1",
+    "astro": "^1.0.0-beta.2",
     "autoprefixer": "^10.4.4",
     "date-fns": "^2.28.0",
     "lodash-es": "^4.17.21",
