create RelatedPosts component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
       ],
       "@layouts/*": [
         "src/layouts/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
       ]
     }
   }
