--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/sitemap": "^0.1.0",
     "@tailwindcss/typography": "^0.5.2",
     "astro": "^1.0.0-beta.12",
     "autoprefixer": "^10.4.4",
