--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^0.10.2",
-    "@astrojs/rss": "^1.0.0",
+    "@astrojs/mdx": "^0.10.3",
+    "@astrojs/rss": "^1.0.3",
     "@astrojs/sitemap": "^1.0.0",
-    "@tailwindcss/typography": "^0.5.4",
-    "astro": "^1.1.1",
-    "autoprefixer": "^10.4.8",
-    "date-fns": "^2.28.0",
+    "@tailwindcss/typography": "^0.5.8",
+    "astro": "^1.6.11",
+    "autoprefixer": "^10.4.13",
+    "date-fns": "^2.29.3",
     "lodash-es": "^4.17.21",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "postcss": "^8.4.19"
+  },
+  "dependencies": {
+    "@astrojs/tailwind": "^2.1.3",
+    "tailwindcss": "^3.2.4"
   }
 }
