fix errors from astro check command"

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/rss": "^1.0.3",
     "@astrojs/sitemap": "^1.0.0",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/lodash-es": "^4.17.6",
     "astro": "^2.0.8",
     "autoprefixer": "^10.4.13",
     "date-fns": "^2.29.3",
