--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^0.16.2",
-    "@astrojs/rss": "^2.3.1",
+    "@astrojs/mdx": "^0.18.2",
+    "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/lodash-es": "^4.17.7",
-    "astro": "^2.1.5",
+    "astro": "^2.1.9",
     "autoprefixer": "^10.4.14",
     "date-fns": "^2.29.3",
     "lodash-es": "^4.17.21",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^3.1.1",
-    "tailwindcss": "^3.2.7"
+    "@astrojs/tailwind": "^3.1.1"
   }
 }
