--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "tailwindcss": "^3.3.1"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^3.1.1"
+    "@astrojs/tailwind": "^3.1.1",
+    "@fontsource/ibm-plex-sans-thai": "^4.5.11",
+    "@fontsource/noto-serif-thai": "^4.5.13"
   }
 }
