--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.6",
     "@astrojs/tailwind": "^3.1.1",
     "@fontsource/ibm-plex-sans-thai": "^4.5.11",
-    "@fontsource/noto-serif-thai": "^4.5.13"
+    "@fontsource/noto-serif-thai": "^4.5.13",
+    "sharp": "^0.32.0"
   }
 }
