--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@astrojs/image": "^0.16.9",
     "@astrojs/tailwind": "^3.1.3",
     "@fontsource/ibm-plex-sans-thai": "^4.5.11",
-    "@fontsource/noto-serif-thai": "^4.5.13",
+    "@fontsource/sarabun": "^5.0.2",
     "sharp": "^0.32.1"
   }
 }
