WIP: setup keystatic

--- a/package.json
+++ b/package.json
@@ -3,25 +3,33 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host 127.0.0.1",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/markdoc": "^0.8.0",
     "@astrojs/mdx": "^2.0.1",
+    "@astrojs/react": "^3.0.7",
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.3",
     "@fontsource/frank-ruhl-libre": "^5.0.18",
     "@fontsource/sarabun": "^5.0.18",
+    "@keystatic/astro": "^2.0.3",
+    "@keystatic/core": "^0.2.8",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash-es": "^4.17.12",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
     "astro": "^4.0.4",
     "autoprefixer": "^10.4.16",
     "date-fns": "^2.30.0",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.33.0",
     "tailwindcss": "^3.3.6"
   }
