--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "strictNullChecks": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "@components/*": [
         "src/components/*"
@@ -14,6 +14,8 @@
       "@shared/*": [
         "src/shared/*"
       ]
-    }
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
