--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.33.0",
     "tailwindcss": "^3.3.6"
+  },
+  "dependencies": {
+    "@astrojs/netlify": "^4.0.1"
   }
 }
