--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev --host 127.0.0.1",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && pagefind --site dist && cp -r dist/pagefind public/",
     "preview": "astro preview"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.17",
     "date-fns": "^3.3.1",
     "lodash-es": "^4.17.21",
+    "pagefind": "^1.0.4",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +35,8 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
-    "@astrojs/netlify": "^5.1.3"
+    "@astrojs/check": "^0.5.7",
+    "@astrojs/netlify": "^5.1.3",
+    "typescript": "^5.4.2"
   }
 }
