--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/netlify": "^5.2.1",
+    "lucide-react": "^0.390.0",
     "typescript": "^5.4.5"
   }
 }
