post/Video component in Keystatic & Astro (#46)
* WIP: create video custom element in keystatic

* WIP: convert video component to a react component

* WIP: add more draft content

* WIP: use another dummy video file

* finish the post

* small fixes

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@keystatic/core": "^0.5.16",
     "@tailwindcss/typography": "^0.5.13",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3.2",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.0",
     "autoprefixer": "^10.4.19",
@@ -37,6 +37,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/netlify": "^5.2.1",
+    "lucide-react": "^0.390.0",
     "typescript": "^5.4.5"
   }
 }
