--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^6.0.0",
     "@keystatic/astro": "^5.0.4",
     "@keystatic/core": "^0.5.43",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -30,14 +29,17 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^4.0.3"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/netlify": "^6.1.0",
+    "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/source-serif-4": "^5.1.0",
     "@fontsource/ibm-plex-sans-thai-looped": "^5.1.0",
     "@fontsource/source-serif-4": "^5.1.0",
+    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/vite": "^4.0.3",
     "lucide-react": "^0.460.0",
     "typescript": "^5.6.3"
   }
